fix: remove horizontal scrolling

--- a/assets/base.css
+++ b/assets/base.css
@@ -273,7 +273,7 @@ summary .icon-caret {
 .button:not(.ignore-effect):not(:disabled):hover {
   color: rgb(var(--color-button))!important;
   display: flex!important;
-  background: rgb(var(--color-button-text)) !important;
+  background-color: rgb(var(--color-button-text)) !important;
 }
 
 .button--secondary:not(.ignore-effect):not(:disabled):hover, .button--tertiary:not(.ignore-effect):not(:disabled):hover {
